# python-project-49

./: .gitignore  Makefile  README.md  hexlet-code-0.2.2  hexlet-code-0.2.5  hexlet-code-0.2.6  hexlet-code-0.2.9  hexlet-code-0.2.91  pyproject.toml  setup.cfg
brain_games/: brain_game.py  cli.py  consts.py  engine.py  utils.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc_game.py  even_game.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  gcd_game.py  prime_game.py  progression_game.py  run_brain_games.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_game.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
