[tool.poetry]
name = "hexlet-code"
version = "0.2.9"
description = ""
packages = [
  { include = "brain_games" },
]
authors = ["OLVOS <anhkrem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
#зачем я существую?
brain-games = "brain_games.brain_game:main"
#games
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
